2004-02-03  Carlos Perelló Marín <carlos@gnome.org>

	* configure.in, capplets/Makefile.am: Removed the localization capplet
	references, it will wait until GNOME 2.7, it's too late for GNOME 2.6.

2004-01-18  Jason Leach  <leach@wam.umd.edu>

	* schemas/Makefile.am (install-data-local): builddir != srcdir fix.

2004-01-14  Jody Goldberg <jody@gnome.org>

	* configure.in : post release bump

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2004-01-14  Bastien Nocera  <hadess@hadess.net>

	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in:
	Change the labels for a couple of keys, make them more of the style
	of the current ones

2004-01-08  Carlos Perelló Marín <carlos@gnome.org>

	* configure.in: The localization capplet is disabled until we remove
	the libicu dependency.

2004-01-08  Jody Goldberg <jody@gnome.org>

	* configure.in : Damn, forgot to bump the version after to point release.

2004-01-05  Carlos Perelló Marín <carlos@gnome.org>

	* configure.in: Added a check for libicu and the needed lines to add
	the localization capplet.
	* capplets/Makefile.am: Added the localization dir.
	* capplets/localization: Added the localization capplet to change
	the locales.
	* po/POTFILES.in: Added new files from localization capplet.

2004-01-01  Rodney Dawes  <dobey@ximian.com>

	* configure.in: Require GTK+ 2.3.0
	  Fix --disable-vfs-methods to work

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Christian Neumair  <chris@gnome-de.org>

	* capplets/font/main.c: (application_font_to_gconf):
	* capplets/display/main.c: (timeout_string): Use ngettext for plurals
	(#125175).

2003-12-30  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-12-16  Jody Goldberg <jody@gnome.org>

	* capplets/file-types/file-types.desktop.in : remove the png so that
	  it can theme.

	* capplets/desktop-links/Makefile.am : remove .in.in path kludge.